# lab7

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  City.cpp  City.h  Weather.cpp  Weather.h  pictures.h
